readme run instructions added

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,3 +1,7 @@
+<head>
+  <link rel='stylesheet' href='/Users/audols/Development/vested/vestedApplication/lib/ionic/css/ionic.css'>
+  <link rel='stylesheet' href='/Users/audols/Development/vested/vestedApplication/lib/ionic/css/ionic.min.css'>
+</head>
 <ion-view title="Signup" id="page3">
   <ion-content padding="true" class="has-header">
 
